// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/multiselect/multiselect should match snapshot 1`] = `
<div
  className="filtered-user-list"
>
  <div
    className="filter-row filter-row--full"
  >
    <div
      className="multi-select__container"
    >
      <Select
        arrowRenderer={[Function]}
        autosize={true}
        backspaceRemoves={true}
        backspaceToRemoveMessage="Press backspace to remove {label}"
        clearAllText="Clear all"
        clearRenderer={[Function]}
        clearValueText="Clear value"
        clearable={false}
        closeOnSelect={true}
        deleteRemoves={true}
        delimiter=","
        disabled={false}
        escapeClearsValue={true}
        filterOptions={[Function]}
        ignoreAccents={true}
        ignoreCase={true}
        inputProps={Object {}}
        isLoading={false}
        joinValues={true}
        labelKey="label"
        matchPos="any"
        matchProp="any"
        menuBuffer={0}
        menuRenderer={[Function]}
        multi={true}
        noResultsText={null}
        onBlurResetsInput={false}
        onChange={[Function]}
        onCloseResetsInput={false}
        onInputChange={[Function]}
        onInputKeyDown={[Function]}
        onSelectResetsInput={true}
        openOnClick={true}
        openOnFocus={true}
        optionComponent={[Function]}
        options={
          Array [
            Object {
              "id": 0,
              "value": 0,
            },
            Object {
              "id": 1,
              "value": 1,
            },
            Object {
              "id": 2,
              "value": 2,
            },
            Object {
              "id": 3,
              "value": 3,
            },
            Object {
              "id": 4,
              "value": 4,
            },
            Object {
              "id": 5,
              "value": 5,
            },
            Object {
              "id": 6,
              "value": 6,
            },
            Object {
              "id": 7,
              "value": 7,
            },
          ]
        }
        pageSize={5}
        placeholder="Search and add members"
        removeSelected={true}
        required={false}
        rtl={false}
        scrollMenuIntoView={true}
        searchable={true}
        simpleValue={false}
        tabSelectsValue={true}
        trimFilter={true}
        value={
          Array [
            Object {
              "id": 100,
              "value": 100,
            },
          ]
        }
        valueComponent={[Function]}
        valueKey="value"
      />
      <SaveButton
        btnClass="btn-primary"
        defaultMessage="Save"
        disabled={false}
        extraClasses=""
        onClick={[Function]}
        saving={false}
        savingMessage="Saving"
      />
    </div>
    <div
      className="multi-select__help"
    >
      <FormattedMessage
        defaultMessage="{memberOptions, number} of {totalCount, number} members"
        id="multiselect.numMembers"
        values={
          Object {
            "memberOptions": 5,
            "totalCount": 8,
          }
        }
      />
    </div>
    <div
      className="multi-select__help"
    />
  </div>
  <MultiSelectList
    onAction={[Function]}
    onAdd={[Function]}
    onSelect={[Function]}
    options={
      Array [
        Object {
          "id": 0,
          "value": 0,
        },
        Object {
          "id": 1,
          "value": 1,
        },
        Object {
          "id": 2,
          "value": 2,
        },
        Object {
          "id": 3,
          "value": 3,
        },
        Object {
          "id": 4,
          "value": 4,
        },
      ]
    }
    page={0}
    perPage={5}
  />
  <div
    className="filter-controls"
  >
    <button
      className="btn btn-default filter-control filter-control__next"
      onClick={[Function]}
    >
      <FormattedMessage
        defaultMessage="Next"
        id="filtered_user_list.next"
        values={Object {}}
      />
    </button>
  </div>
</div>
`;

exports[`components/multiselect/multiselect should match snapshot for page 2 1`] = `
<div
  className="filtered-user-list"
>
  <div
    className="filter-row filter-row--full"
  >
    <div
      className="multi-select__container"
    >
      <Select
        arrowRenderer={[Function]}
        autosize={true}
        backspaceRemoves={true}
        backspaceToRemoveMessage="Press backspace to remove {label}"
        clearAllText="Clear all"
        clearRenderer={[Function]}
        clearValueText="Clear value"
        clearable={false}
        closeOnSelect={true}
        deleteRemoves={true}
        delimiter=","
        disabled={false}
        escapeClearsValue={true}
        filterOptions={[Function]}
        ignoreAccents={true}
        ignoreCase={true}
        inputProps={Object {}}
        isLoading={false}
        joinValues={true}
        labelKey="label"
        matchPos="any"
        matchProp="any"
        menuBuffer={0}
        menuRenderer={[Function]}
        multi={true}
        noResultsText={null}
        onBlurResetsInput={false}
        onChange={[Function]}
        onCloseResetsInput={false}
        onInputChange={[Function]}
        onInputKeyDown={[Function]}
        onSelectResetsInput={true}
        openOnClick={true}
        openOnFocus={true}
        optionComponent={[Function]}
        options={
          Array [
            Object {
              "id": 0,
              "value": 0,
            },
            Object {
              "id": 1,
              "value": 1,
            },
            Object {
              "id": 2,
              "value": 2,
            },
            Object {
              "id": 3,
              "value": 3,
            },
            Object {
              "id": 4,
              "value": 4,
            },
            Object {
              "id": 5,
              "value": 5,
            },
            Object {
              "id": 6,
              "value": 6,
            },
            Object {
              "id": 7,
              "value": 7,
            },
          ]
        }
        pageSize={5}
        placeholder="Search and add members"
        removeSelected={true}
        required={false}
        rtl={false}
        scrollMenuIntoView={true}
        searchable={true}
        simpleValue={false}
        tabSelectsValue={true}
        trimFilter={true}
        value={
          Array [
            Object {
              "id": 100,
              "value": 100,
            },
          ]
        }
        valueComponent={[Function]}
        valueKey="value"
      />
      <SaveButton
        btnClass="btn-primary"
        defaultMessage="Save"
        disabled={false}
        extraClasses=""
        onClick={[Function]}
        saving={false}
        savingMessage="Saving"
      />
    </div>
    <div
      className="multi-select__help"
    >
      <FormattedMessage
        defaultMessage="{memberOptions, number} of {totalCount, number} members"
        id="multiselect.numMembers"
        values={
          Object {
            "memberOptions": 3,
            "totalCount": 8,
          }
        }
      />
    </div>
    <div
      className="multi-select__help"
    />
  </div>
  <MultiSelectList
    onAction={[Function]}
    onAdd={[Function]}
    onSelect={[Function]}
    options={
      Array [
        Object {
          "id": 5,
          "value": 5,
        },
        Object {
          "id": 6,
          "value": 6,
        },
        Object {
          "id": 7,
          "value": 7,
        },
      ]
    }
    page={1}
    perPage={5}
  />
  <div
    className="filter-controls"
  >
    <button
      className="btn btn-default filter-control filter-control__prev"
      onClick={[Function]}
    >
      <FormattedMessage
        defaultMessage="Previous"
        id="filtered_user_list.prev"
        values={Object {}}
      />
    </button>
  </div>
</div>
`;
